Openings can sometimes be expressed in terms of thinnings

--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -32,6 +32,7 @@
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{++-identityʳ}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -90,6 +91,13 @@
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Opening}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Openable}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{openable}\AgdaSymbol{)}\<%
 \end{code}
 
 \begin{code}%
@@ -286,25 +294,14 @@
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Pattern}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
+\AgdaFunction{Openable}\AgdaSpace{}%
+\AgdaDatatype{Pattern}\<%
 \\
 \>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}%
-\>[12]\AgdaSymbol{=}\AgdaSpace{}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}\<%
 \\
@@ -312,8 +309,8 @@
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
@@ -322,14 +319,11 @@
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
@@ -338,8 +332,8 @@
 \>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaInductiveConstructor{place}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{θ}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{place}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{ι}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -348,7 +342,7 @@
 \>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊥}%
-\>[12]\AgdaSymbol{=}\AgdaSpace{}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊥}\<%
 \\
 %
@@ -468,9 +462,9 @@
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSymbol{)}%
 \>[24]\AgdaSymbol{=}%
-\>[301I]\AgdaKeyword{do}\<%
+\>[294I]\AgdaKeyword{do}\<%
 \\
-\>[301I][@{}l@{\AgdaIndent{0}}]%
+\>[294I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -496,9 +490,9 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[318I]\AgdaKeyword{do}\<%
+\>[311I]\AgdaKeyword{do}\<%
 \\
-\>[318I][@{}l@{\AgdaIndent{0}}]%
+\>[311I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -747,17 +741,19 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can 'open up' a svar}\<%
+\>[0]\AgdaComment{-- we can 'open up' a svar but not using Openable as}\<%
+\\
+\>[0]\AgdaComment{-- the resulting svar is indexed by a newly opened pattern}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗svar\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{svar}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{svar}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{svar}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
@@ -767,88 +763,55 @@
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSymbol{\})}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}%
+\>[15]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{⋆}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSymbol{)}%
-\>[12]\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSymbol{)}%
+\>[15]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}%
-\>[12]\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}%
+\>[15]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{v}%
-\>[12]\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{v}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- and a var}\<%
+\>[0]\AgdaComment{-- we can 'open up' variables using the thinning}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗var\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
+\AgdaFunction{Openable}\AgdaSpace{}%
+\AgdaDatatype{Var}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaInductiveConstructor{ze}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{s}\AgdaSymbol{\})}%
-\>[11]\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗var\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{fromNum}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟨var}}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{ι}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{\})}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Ø}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{s}\AgdaSymbol{\}))}\<%
-\\
-\>[0]\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{s}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{su}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{v}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaFunction{openable}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -864,110 +827,23 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can 'open up' a term}\<%
+\>[0]\AgdaComment{-- we can 'open up' a term using the thinning}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Openable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{openable}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}%
-\>[27]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -1023,9 +899,9 @@
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{thing}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
