--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -311,10 +311,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{helper}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -338,9 +334,9 @@
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{ξ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
@@ -470,9 +466,9 @@
 \AgdaBound{ξ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{type}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{ξ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{ι}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{θ}\AgdaSymbol{)}\<%
@@ -495,13 +491,13 @@
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{ξ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∋'}}\AgdaSpace{}%
-\AgdaBound{ξ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
+\AgdaBound{ξ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 \AgdaFunction{ι}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -514,13 +510,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{≡'}}\AgdaSpace{}%
 \AgdaBound{x₁}\AgdaSymbol{)}%
 \>[26]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{≡'}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x₁}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\<%
+\AgdaBound{x₁}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{⊗premise}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
@@ -528,9 +524,9 @@
 \AgdaBound{x}\AgdaSymbol{)}%
 \>[26]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{univ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{⊗premise}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
@@ -541,9 +537,9 @@
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{prem}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⊢'}}\AgdaSpace{}%
 \AgdaFunction{⊗premise}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSpace{}%
