--- a/TypeCheckerGenerator/latex/Test.tex
+++ b/TypeCheckerGenerator/latex/Test.tex
@@ -1,6 +1,6 @@
 \section{Testing}
 
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Test}\AgdaSpace{}%
@@ -8,7 +8,7 @@
 \end{code}
 }
 
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
