--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -30,10 +30,11 @@
 \AgdaFunction{Ø}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{ι}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{++-identityʳ}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}◃\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{++-identityʳ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -49,7 +50,8 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Nat.Properties}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≟\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≟\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{+-identityʳ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -89,15 +91,15 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Nat}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{zero}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Opening}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Openable}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{openable}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaFunction{Openable}\AgdaSymbol{)}\<%
 \end{code}
 
 \begin{code}%
@@ -336,6 +338,7 @@
 \>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{place}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{ι}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{θ}\AgdaSymbol{)}\<%
 \\
@@ -348,6 +351,14 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{-- opening a pattern by 0 is just the pattern}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Thinning}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ε}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}O}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}I}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{⊗-identityʳ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -391,12 +402,10 @@
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{place}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaKeyword{rewrite}\AgdaSpace{}%
 \AgdaFunction{++-identityʳ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
@@ -462,9 +471,9 @@
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSymbol{)}%
 \>[24]\AgdaSymbol{=}%
-\>[294I]\AgdaKeyword{do}\<%
+\>[301I]\AgdaKeyword{do}\<%
 \\
-\>[294I][@{}l@{\AgdaIndent{0}}]%
+\>[301I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -490,9 +499,9 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[311I]\AgdaKeyword{do}\<%
+\>[318I]\AgdaKeyword{do}\<%
 \\
-\>[311I][@{}l@{\AgdaIndent{0}}]%
+\>[318I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{match}\AgdaSpace{}%
@@ -808,10 +817,21 @@
 \AgdaFunction{Openable}\AgdaSpace{}%
 \AgdaDatatype{Var}\<%
 \\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗var\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[0]\AgdaInductiveConstructor{zero}%
+\>[6]\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{openable}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\<%
+\AgdaBound{v}\<%
+\\
+\>[0]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -836,14 +856,91 @@
 \AgdaGeneralizable{d}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{openable}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\<%
+\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
