--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -338,12 +338,11 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{θ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaGeneralizable{δ'}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaGeneralizable{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -352,31 +351,27 @@
 \AgdaBound{θ}\<%
 \\
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{θ}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSymbol{\}}%
-\>[23]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{O}}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{O}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}O}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{++-identityʳ}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaFunction{++-identityʳ}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{I}}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{I}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}I}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{++-identityʳ}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaFunction{++-identityʳ}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
